# Sleep-Detection

./: .env.example  README.md  docker-compose.yml  file_list.txt
.github/workflows/: docker-publish.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
api/db/: .gitignore  __init__.py  database.py  models.py
api/mlops/: __init__.py  train_model.py
api/models/: __init__.py  models.py
api/services/: __init__.py  services.py
app/android/: README.md
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/java/com/example/sleepdetection/: MainActivity.java
app/ios/: README.md
app/ios/SleepDetection/: SleepCoreBridge.h  ViewController.swift
core/: Cargo.toml
core/src/: lib.rs
docs/: ARCHITECTURE.md  BACKEND-COMPLETE.md  DATABASE-STRUCTURE.md  DEPLOYMENT.md  DOCKER-REGISTRY.md  DOCKER.md  INDEX.md  MLOPS-GUIDE.md  MLOPS-QUICKSTART.md
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/public/: manifest.json  sw.js
