[project]
name = "sleepsafe-backend"
version = "1.0.0"
description = "MLOps backend for SleepSafe drowsiness detection"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mlflow>=2.19.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
]

[tool.uv]
dev-dependencies = []
