[package]
name = "sleep_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "sleep_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# JNI for Android
jni = { version = "0.21.1", optional = true }

[features]
default = []
android = ["jni"]
ios = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

